<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simcharts</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simon.lexau@ntnu.no">Simon Lexau</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>yaml</depend>
  <depend>cerberus</depend>
  <depend>fiona</depend>
  <depend>shapely</depend>
  <depend>matplotlib</depend>
  <depend>numpy</depend>
  <depend>multiprocessing</depend>
  <depend>cartopy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
