[project]
name = "seacharts"
version = "2.1.0"
description = "Fork of simbli/seacharts compatible with Python <=3.11 and the colav-simulator"
readme = "README.md"
authors = [
    {name = "Trym Tengesdal", email = "tengesdal1994@gmail.com"},
    {name = "Simon Blindheim", email = "simon.blindheim@ntnu.no"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.12"
dependencies = [
    "cartopy",
    "cerberus",
    "fiona",
    "gdal<=3.12.0.post1",
    "matplotlib",
    "matplotlib-scalebar",
    "numpy",
    "pyyaml",
    "scipy",
    "shapely",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]


